# llm-extract

./: .env.example  .gitignore  122708972-extracted.csv  RCT Sample-extracted.xlsx  README.md  aiayn-extracted.csv  config.py  exceptions.py  factory.py  loader.py  main.py  models.py  modules.py  pyproject.toml  sample-extracted.csv
.github/workflows/: ci.yml
llm_extract/: api.py  cli.py  config.py  document_processor.py  exceptions.py  export.py  factory.py  loader.py  models.py  modules.py  pdf.py
llm_extract/cli/: __init__.py  common.py  file.py  folder.py
llm_extract/export/: __init__.py  common.py  csv.py  excel.py  extraction_result.py  json.py  writer.py
llm_extract/factory/: __init__.py  attribute.py  csv.py  signature.py  type.py  workbook.py
tests/: test_api.py  test_cli.py  test_config.py  test_document_processor.py  test_export.py  test_factory.py  test_integration.py  test_loader.py  test_models.py  test_modules.py
tests/fixtures/: RCT Sample.md  RevMan Extraction Template.xlsx  attributes.csv  paper_attributes.csv  sample.txt
tests/fixtures/documents/: article1.md  article2.md  product1.txt  product2.txt  product3.txt
tests/fixtures/nested_docs/project1/: doc1.txt  doc2.txt
tests/fixtures/nested_docs/project2/subdir/: doc3.txt
