[project]
name = "llm-extract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "botocore>=1.43.18",
    "dotenv>=0.9.9",
    "dspy>=3.2.1",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.ruff.lint]
select = ["ANN001", "ANN201", "ANN204", "D101", "D102", "D103"]
ignore = ["D100", "D104", "D107", "D212"]
